--- a/index.html
+++ b/index.html
@@ -90,39 +90,35 @@
             <h2 class="hidden-heading">Meet-up Times</h2>
             <div id="times">
                 <div>
-                    <h3>Urban <i class="fa-solid fa-city"></i></h3>
+                    <h3>Poppit Sands <i class="fa-solid fa-yin-yang"></h3>
                     <p>Monday</p>
-                    <p>5K</p>
-                    <p>The Marker Hotel</p>
-                    <p>18:30</p>
+                    <p>Beijing 24 Form</p>
+                    <p>6:00am</p>
                 </div>
                 <div>
-                    <h3>Trail <i class="fa-solid fa-tree"></i></h3>
+                    <h3>Newport Beach<i class="fa-solid fa-yin-yang"></h3>
+                    <p>Tuesday</p>
+                    <p>Yang 108 Form</p>
+                    <p>The Phoenix Park</p>
+                    <p>6:00am</p>
+                </div>
+                <div>
+                    <h3>Aberporth Beach<i class="fa-solid fa-yin-yang"></h3>
                     <p>Wednesday</p>
-                    <p>10K</p>
-                    <p>The Phoenix Park</p>
-                    <p>18:30</p>
+                    <p>Beijing 24 Form</p>
+                    <p>6:00am</p>
                 </div>
                 <div>
-                    <h3>Urban <i class="fa-solid fa-city"></i></h3>
-                    <p>Friday</p>
-                    <p>5K</p>
-                    <p>The Marker Hotel</p>
-                    <p>18:30</p>
+                    <h3>Poppit Sands<i class="fa-solid fa-yin-yang"></i></h3>
+                    <p>Thursday</p>
+                    <p>42 Sword Form</p>
+                    <p>6:00am</p>
                 </div>
                 <div>
-                    <h3>Trail<i class="fa-solid fa-yin-yang"></i></h3>
-                    <p>Saturday</p>
-                    <p>10K</p>
-                    <p>The Phoenix Park</p>
-                    <p>09:30</p>
-                </div>
-                <div>
-                    <h3>Coffee <i class="fa-solid fa-mug-hot"></i></h3>
-                    <p>Sunday</p>
-                    <p>0K</p>
-                    <p>The Marker Hotel</p>
-                    <p>11:30</p>
+                    <h3>Poppit Sands<i class="fa-solid fa-yin-yang"></i></h3>
+                    <p>Thursday</p>
+                    <p>42 Sword Form</p>
+                    <p>6:00am</p>
                 </div>
             </div>
         </section>
