--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Header -->
     <header>
         <a href="index.html">
-            <h1 id="logo"><i class="fa-solid fa-yin-yang"></i>Tai Chi On The Beach</h1>
+            <h1 id="logo"><i class="fa-solid fa-yin-yang"></i> Tai Chi On The Beach</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label">
@@ -54,30 +54,26 @@
             <div id="benefits">
                 <div id="benefits-physical">
                     <div>
-                        <h3>Feel healthy <i class="fa-solid fa-heart-pulse"></i></h3>
-                        <hr>
-                        <p>Since it improves aerobic fitness, running is a great way to help improve your cardiovascular
-                            health. Plus, it burns calories and can build strength.</p>
+                        <h3>Increased blood circulation<i class="fa-solid fa-droplet"></i></h3>
                     </div>
                     <div>
-                        <h3>Feel strong <i class="fa-solid fa-dumbbell"></i></h3>
-                        <hr>
-                        <p>Running strengthens your heart by pumping blood more effectively through your body.</p>
+                        <h3>Better Sleep<i class="fa-solid fa-bed"></i></h3>
+                    </div>
+                    <div>
+                        <h3>Reduces Stress<i class="fa-solid fa-heart-pulse"></i></h3>
                     </div>
                 </div>
                 <div id="benefits-mental">
                     <div>
-                        <h3>Feel free <i class="fa-brands fa-fly"></i></h3>
-                        <hr>
-                        <p>Physical exercise, running included, is known to release endorphins in the brain. Endorphins
-                            make you more energetic, more awake and, yes, happier.</p>
+                        <h3>Enhanced mental capacity and concentration<i class="fa-solid fa-brain"></i></h3>
                     </div>
                     <div>
-                        <h3>Get social <i class="fa-solid fa-globe"></i></h3>
-                        <hr>
-                        <p>When we run with others, we can run farther and faster more easily. Social running can pull
-                            you out of a running funk or low mood, and inspire you to try new events.</p>
+                        <h3>Less Pain<i class="fa-brands fa-pagelines"></i></h3>
                     </div>
+                    <div>
+                        <h3>Stronger Immunity<i class="fa-solid fa-virus-covid"></i></h3>
+                    </div>
+                    
                 </div>
                 <div id="benefits-image">
                     <div id="circle-cover-bg"></div>
@@ -90,26 +86,26 @@
             <h2 class="hidden-heading">Meet-up Times</h2>
             <div id="times">
                 <div>
-                    <h3>Poppit Sands <i class="fa-solid fa-yin-yang"></h3>
+                    <h3>Poppit Sands</h3>
                     <p>Monday</p>
                     <p>Beijing 24 Form</p>
                     <p>6:00am</p>
                 </div>
                 <div>
-                    <h3>Newport Beach<i class="fa-solid fa-yin-yang"></h3>
+                    <h3>Newport Beach</h3>
                     <p>Tuesday</p>
                     <p>Yang 108 Form</p>
                     <p>The Phoenix Park</p>
                     <p>6:00am</p>
                 </div>
                 <div>
-                    <h3>Aberporth Beach<i class="fa-solid fa-yin-yang"></h3>
+                    <h3>Aberporth Beach</h3>
                     <p>Wednesday</p>
                     <p>Beijing 24 Form</p>
                     <p>6:00am</p>
                 </div>
                 <div>
-                    <h3>Poppit Sands<i class="fa-solid fa-yin-yang"></i></h3>
+                    <h3>Poppit Sands</h3>
                     <p>Thursday</p>
                     <p>42 Sword Form</p>
                     <p>6:00am</p>
