complete index page

--- a/index.html
+++ b/index.html
@@ -54,24 +54,24 @@
             <div id="benefits">
                 <div id="benefits-physical">
                     <div>
-                        <h3>Increased blood circulation<i class="fa-solid fa-droplet"></i></h3>
+                        <h3><i class="fa-solid fa-droplet"></i> Increased blood circulation</h3>
                     </div>
                     <div>
-                        <h3>Better Sleep<i class="fa-solid fa-bed"></i></h3>
+                        <h3><i class="fa-solid fa-bed"></i> Better Sleep</h3>
                     </div>
                     <div>
-                        <h3>Reduces Stress<i class="fa-solid fa-heart-pulse"></i></h3>
+                        <h3><i class="fa-solid fa-heart-pulse"></i> Reduces Stress </h3>
                     </div>
                 </div>
                 <div id="benefits-mental">
                     <div>
-                        <h3>Enhanced mental capacity and concentration<i class="fa-solid fa-brain"></i></h3>
+                        <h3>Enhanced concentration <i class="fa-solid fa-brain"></i></h3>
                     </div>
                     <div>
-                        <h3>Less Pain<i class="fa-brands fa-pagelines"></i></h3>
+                        <h3>Less Pain <i class="fa-brands fa-pagelines"></i></h3>
                     </div>
                     <div>
-                        <h3>Stronger Immunity<i class="fa-solid fa-virus-covid"></i></h3>
+                        <h3>Stronger Immunity <i class="fa-solid fa-virus-covid"></i></h3>
                     </div>
                     
                 </div>
@@ -95,7 +95,6 @@
                     <h3>Newport Beach</h3>
                     <p>Tuesday</p>
                     <p>Yang 108 Form</p>
-                    <p>The Phoenix Park</p>
                     <p>6:00am</p>
                 </div>
                 <div>
