brush up index page

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                     <p>6:00am</p>
                 </div>
                 <div>
-                    <h3>Poppit Sands<i class="fa-solid fa-yin-yang"></i></h3>
-                    <p>Thursday</p>
+                    <h3>Poppit Sands</h3>
+                    <p>Friday</p>
                     <p>42 Sword Form</p>
                     <p>6:00am</p>
                 </div>
